# ase_exploration

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: Explore.action
cfg/: Planner.cfg
include/ExplorationPlanner/grid/: IPlanarGridMap.h  PlanarGridBinaryMap.h  PlanarGridContainer.h  PlanarGridIndex.h  PlanarGridOccupancyMap.h
include/ExplorationPlanner/kinematics/: IConstraint.h  IPlanarKinematics.h  IPlanarRobotVelCmdSampler.h  PlanarPose.h  PlanarRobotVelCmd.h  PlanarRobotVelCmdSamplerIndependentGaussian.h  PlanarRobotVelCmdSamplerUniform.h  RangeConstraint.h  VelocityPlanarKinematics.h
include/ExplorationPlanner/planner/: ExplorationTaskState.h  ICoolingSchedule.h  IPlanningAlgorithm.h  LinearCoolingSchedule.h  Particle.h  ParticleSet.h  SDMPlanner.h  SMCPlanner.h  SMCPlannerParameters.h
include/ExplorationPlanner/sensor/: Bresenham2D.h  LaserScanner2D.h  PlanarCellObservation.h  PlanarObservation.h  Raytracer2D.h
include/ExplorationPlanner/trajectory/: TrajectoryChecker.h  TrajectoryEvaluator.h  TrajectoryGenerator.h  TrajectoryValue.h  TrajectoryValueHandler.h
include/ExplorationPlanner/utils/: EntropyLUT.h  LogOddsLUT.h  RNG.h
include/ExplorationPlannerROS/: ExplorationPlannerROS.h
launch/: move_base.launch.xml  simulator_exploration.launch  turtlebot_simulator.launch
maps/: mit.yaml
maps/stage/: mit.world  turtlebot.inc
param/: frontier_exploration.yaml  planner.yaml
param/navigation/: costmap_common_params.yaml  dwa_local_planner_params.yaml
rviz/: simulator_exploration.rviz
src/: exploration_planner_node.cpp
src/ExplorationPlanner/grid/: PlanarGridBinaryMap.cpp  PlanarGridOccupancyMap.cpp
src/ExplorationPlanner/kinematics/: PlanarPose.cpp  PlanarRobotVelCmd.cpp  PlanarRobotVelCmdSamplerIndependentGaussian.cpp  PlanarRobotVelCmdSamplerUniform.cpp  RangeConstraint.cpp  VelocityPlanarKinematics.cpp
src/ExplorationPlanner/planner/: ExplorationTaskState.cpp  ICoolingSchedule.cpp  Particle.cpp  ParticleSet.cpp  SMCPlanner.cpp  SMCPlannerParameters.cpp
src/ExplorationPlanner/sensor/: Bresenham2D.cpp  LaserScanner2D.cpp  Raytracer2D.cpp
src/ExplorationPlanner/trajectory/: TrajectoryChecker.cpp  TrajectoryEvaluator.cpp  TrajectoryGenerator.cpp  TrajectoryValueHandler.cpp
src/ExplorationPlanner/utils/: EntropyLUT.cpp  LogOddsLUT.cpp
src/ExplorationPlannerROS/: ExplorationPlannerROS.cpp
