<?xml version="1.0"?>
<package>
  <name>ase_exploration</name>
  <version>0.1.0</version>
  <description>The ase_exploration package</description>

  <maintainer email="mikko.lauri@tut.fi">Mikko Lauri</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!--<url type="repository">http://wiki.ros.org/ase_exploration</url>-->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="mikko.lauri@tut.fi">Mikko Lauri</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>frontier_exploration</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>frontier_exploration</run_depend>
</package>
